token and env