@@ -10,10 +10,8 @@ import org.springframework.security.web.authentication.preauth.AbstractPreAuthen
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import com.portfolio.alejandro.Security.ApiTokenFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -26,15 +24,14 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors()
-            .and()
-            .csrf().disable()
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Configuración de CORS
+            .csrf().disable() // Desactiva CSRF para permitir solicitudes sin autenticación de formularios
             .addFilterAt(apiTokenFilter(), AbstractPreAuthenticatedProcessingFilter.class)
             .authorizeRequests(authorizeRequests ->
                 authorizeRequests
-                    .requestMatchers("/api/contacts/**").authenticated()
-                    .requestMatchers("/public/**").permitAll()
-                    .anyRequest().authenticated()
+                    .requestMatchers("/api/contacts/**").authenticated() // Requiere autenticación
+                    .requestMatchers("/public/**").permitAll() // Acceso público
+                    .anyRequest().authenticated() // Cualquier otra solicitud requiere autenticación
             );
 
         return http.build();
@@ -48,13 +45,15 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Permitir todas las solicitudes
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(true);
+        // Configuración de CORS
+        configuration.setAllowedOrigins(List.of("*")); // Permitir todos los orígenes
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Métodos permitidos
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type")); // Headers permitidos
+        configuration.setExposedHeaders(List.of("Authorization")); // Headers expuestos
+        configuration.setAllowCredentials(true); // Permitir credenciales
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Aplicar configuración a todas las rutas
         return source;
     }
 }
